<resources>
    <string name="app_name">POSheesh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Don Macchiatos</string>
    <string name="nav_header_subtitle">Points of Sales and Inventory Management</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price">Total Price: ₱%1$.2f</string>
    <string name="login_ek3_string">LOGIN</string>
    <string name="code_string">Code</string>
    <string name="enter_cashier_code_string">Enter Cashier Code</string>
    <string name="title_activity_login">Login</string>
</resources>