<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_background">

    <!-- Logo at the top -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_ic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <!-- Cashier Code EditText -->
    <RelativeLayout
        android:id="@+id/relativeCashierCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewCashierCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/enter_cashier_code_string"
            android:textColor="#000000"
            android:textSize="18sp" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCashierCode"
            app:cardBackgroundColor="@color/default_background"
            android:layout_marginTop="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="?android:attr/selectableItemBackground">

            <EditText
                android:id="@+id/editTextCashierCode"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/rectangle_1_shape"
                android:layout_marginBottom="4dp"
                android:elevation="4dp"
                android:hint="@string/code_string"
                android:textColor="#000000" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <!-- Submit Button -->
    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeCashierCode"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/_rectangle_14_shape"
        android:text="@string/login_ek3_string"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />


    <Button
        android:id="@+id/buttonAccessAdmin"
        android:layout_width="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/_rectangle_14_shape"
        android:text="Add User"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible" />

</RelativeLayout>
